--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ sphinx-toolbox = { version = "^2.15.2", optional = true }
 Sphinx = { version= "^4.0.2", optional = true }
 enum-tools = { version= "^0.7.0", optional = true }
 furo = { version= "^2021.11.23", optional = true }
+paramiko = "^3.3.1"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.8.0"
